--- a/package.json
+++ b/package.json
@@ -10,25 +10,40 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.9",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.10.3",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^4.12.0",
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.26.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.11.19",
     "@types/react": "^18.2.37",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-big-calendar": "^1.8.8",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.15",
     "@types/react-slick": "^0.23.13",
