--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
+    "draft-js": "^0.11.7",
     "framer-motion": "^11.0.3",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
@@ -39,6 +40,7 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.17",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.37",
